Add base for GUI

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 
-add_executable(PitchTrainer main.cpp Note.cpp)
+add_executable(PitchTrainer main.cpp Game.cpp Note.cpp)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-target_link_libraries(PitchTrainer sfml-audio sfml-system)
+target_link_libraries(PitchTrainer sfml-audio sfml-graphics sfml-window sfml-system)
