--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(AudioPlayer VERSION 0.1.0)
 
+add_compile_options("-Wall" "-Wpedantic" "-Wextra")
+
 add_subdirectory(src)
